--- a/igra/src/styles.css
+++ b/igra/src/styles.css
@@ -1,91 +1,88 @@
-* {
-    background-color: #fff;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    padding: 5px;
-  }
-  
-  body {
-    width: 100%;
-    margin: 1rem auto;
-    display: flex;
-    justify-content: space-evenly;
-    
-  }
-  
-  .player {
-    width: 240px;
-    height: 180px;
-    margin: 50px;
-    border-radius: 50%;
-    text-align: center;
-    display: inline-block;
-  }
-  
-  .weaponBtn {
-    width: 100px;
-    height: 50px;
-    display: inline;
-    margin: auto 15px;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 25px;
-    background: #000;
-  }
-
-  .parneparBtn {
-    width: 100px;
-    height: 50px;
-    display: inline;
-    margin: auto 10px;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 25px;
-    background: #000;
-    margin-left: 350px;
-    display: block;
-  }
 
 
-  .parneparBtn:focus{
-    color: blue;
-  }
-  .parneparBtn:active{
-    color: blue;
-  }
+body {
+  background-image: url("./assets/wooden.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   
-  .player:nth-child(2) {
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-  }
-  
-  .winner {
-    width: 100px;
-    height: 55px;
-    margin: 10px auto;
-    color: brown;
-    font-size: 18px;
-    text-align: center;
-    font-weight: bold;
-  }
-  .player-image {
-    height: 200px;
-    width: auto;
-  }
-  button {
-    width: 200px;
-    height: 50px;
-    display: block;
-    margin: -20px auto ;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 25px;
-    background: #000;
-    outline: none;
-  }
-  
-  button:hover {
-    cursor: pointer;
-    color:red;
-  }
-  
+}
+
+.player {
+  width: 240px;
+  height: 180px;
+  margin: 50px;
+  position: center;
+  margin-left: 300px;
+  border-radius: 50%;
+  text-align: center;
+  display: inline-block;
+}
+
+.weaponBtn {
+  width: 100px;
+  height: 50px;
+  display: inline;
+  margin-right:0px;
+  margin-left: 100px;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 25px;
+  background: #000;
+}
+
+.parneparBtn {
+  width: 100px;
+  height: 50px;
+  display: inline;
+  margin: auto 10px;
+  margin-bottom: 10px;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 25px;
+  background: #000;
+  margin-left: 350px;
+  display: block;
+}
+
+
+.parneparBtn:focus{
+  color: blue;
+}
+.parneparBtn:active{
+  color: blue;
+}
+
+.player:nth-child(2) {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
+.winner {
+  width: 100px;
+  height: 55px;
+  margin: 10px auto;
+  color: brown;
+  font-size: 18px;
+  text-align: center;
+  font-weight: bold;
+}
+.player-image {
+  height: 400px;
+  width: auto;
+}
+button {
+  width: 200px;
+  height: 50px;
+  display: block;
+  margin: -20px auto ;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 25px;
+  background: #000;
+  outline: none;
+}
+
+button:hover {
+  cursor: pointer;
+  color:red;
+}
