--- a/igra/src/styles.css
+++ b/igra/src/styles.css
@@ -1,56 +1,37 @@
-
-
-body {
+#root, html, body {
   background-image: url("./assets/wooden.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
-.player {
-  width: 240px;
-  height: 180px;
-  margin: 50px;
-  position: center;
-  margin-left: 300px;
-  border-radius: 50%;
-  text-align: center;
-  display: inline-block;
+.player-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
 }
 
-.weaponBtn {
-  width: 100px;
-  height: 50px;
-  display: inline;
-  margin-right:0px;
-  margin-left: 100px;
-  color: #fff;
-  font-size: 18px;
-  border-radius: 25px;
-  background: #000;
+.player-image {
+    height: 400px;
+    width: 200px;
 }
 
-.parneparBtn {
-  width: 100px;
-  height: 50px;
-  display: inline;
-  margin: auto 10px;
-  margin-bottom: 10px;
-  color: #fff;
-  font-size: 18px;
-  border-radius: 25px;
-  background: #000;
-  margin-left: 350px;
-  display: block;
+.buttons-container {
+    display: flex;
+    width: 60%;
+    justify-content: center;
+}
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
 }
 
 
-.parneparBtn:focus{
-  color: blue;
-}
-.parneparBtn:active{
-  color: blue;
-}
 
 .player:nth-child(2) {
   -webkit-transform: scaleX(-1);
@@ -66,23 +47,24 @@ body {
   text-align: center;
   font-weight: bold;
 }
-.player-image {
-  height: 400px;
-  width: auto;
-}
-button {
-  width: 200px;
-  height: 50px;
-  display: block;
-  margin: -20px auto ;
-  color: #fff;
+
+.button {
   font-size: 18px;
   border-radius: 25px;
-  background: #000;
+  padding: 2% 4%;
   outline: none;
+  margin: 2%;
 }
 
-button:hover {
+.button:active {
+  color: blue;
+}
+
+.button:hover {
   cursor: pointer;
   color:red;
+}
+
+.active {
+    color: blue;
 }
