--- a/igra/src/styles.css
+++ b/igra/src/styles.css
@@ -5,6 +5,7 @@
   height: 100vh;
   margin: 0;
   padding: 0;
+  font-family: 'Baloo Bhaina 2', cursive;
 }
 
 .player-container {
@@ -51,7 +52,6 @@
 
 .button {
   font-size: 25px;
-  font-family: Impact, 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
   border-radius: 25px;
   padding: 2% 4%;
   outline: none;
@@ -86,10 +86,12 @@ font-size: 90px;
 color: white;
 }
 
-.rounds{
-  position:absolute;
+.rounds {
+  height: 200px;
+  overflow: auto;
+  position: absolute;
   justify-content: center;
   margin-top: 150px;
   font-size: 40px;
   color: white;
-  }
+}
