--- a/igra/src/styles.css
+++ b/igra/src/styles.css
@@ -51,7 +51,8 @@
 }
 
 .button {
-  font-size: 25px;
+  font-size: 30px;
+  font-weight: bold;
   border-radius: 25px;
   padding: 2% 4%;
   outline: none;
